; ModuleID = '/home/carl/AnghaBench/micropython/extmod/uzlib/extr_tinfgzip.c_tinf_skip_bytes.c'
source_filename = "/home/carl/AnghaBench/micropython/extmod/uzlib/extr_tinfgzip.c_tinf_skip_bytes.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @tinf_skip_bytes(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  br label %5

5:                                                ; preds = %9, %2
  %6 = load i32, i32* %4, align 4
  %7 = add nsw i32 %6, -1
  store i32 %7, i32* %4, align 4
  %8 = icmp ne i32 %6, 0
  br i1 %8, label %9, label %12

9:                                                ; preds = %5
  %10 = load i32*, i32** %3, align 8
  %11 = call i32 @uzlib_get_byte(i32* %10)
  br label %5

12:                                               ; preds = %5
  ret void
}

declare dso_local i32 @uzlib_get_byte(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
